# AgentShell

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/agentshell/: __init__.py  __main__.py  cli_analyzer.py  history.py  main.py  mcp_server.py  sandbox.py  template_engine.py
tests/: test_cli_analyzer.py  test_history.py  test_sandbox.py  test_template_engine.py
